--- a/puzzle-game/style.css
+++ b/puzzle-game/style.css
@@ -8,7 +8,7 @@
 } */
 #root{
     width:100%;
-    height: 100%;
+    /* height: 100vw; */
     display:flex;
     flex-direction: column;
     justify-content: center;
@@ -16,18 +16,18 @@
 }
 
 .container{
+
     box-sizing: content-box;
     /* border: 2px solid #3b3b3b; */
     list-style: none;
     display:grid;
 }
-.container > li {
+/* .container > li {
     position:relative;
-    /* padding-Top:100%; */
+    
     overflow: hidden;
+    
 }
 .container > li > img{
     position: absolute;
-    width:500%;
-    height: 500%;
-}
+}  */
