--- a/Infinite-scroll/style.css
+++ b/Infinite-scroll/style.css
@@ -5,25 +5,31 @@
 #root{
     width:100%;
 }
-.ItemListPage{
+.itemListPage{
     width:90%;
-    height:100%;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    margin:0 auto;
 }
 .itemList{
     width:100%;
-    height: 100%;
     display:flex;
-    flex-wrap:wrap;
-    justify-content: center;
+    flex-wrap: wrap;
+    
     align-items: center;
 }
 .item{
+    flex-direction: column;
+    flex:0 0 calc((100% - (0.6rem*8)) / 4 );
+    margin:0.6rem;
+}
+.item-img-container{
     position: relative;
     padding-top: 100%;
-    flex : 0 0 22%;
-    margin:0.8rem;
+    width:100%;
 }
-.item > img{
+.item-img-container > img{
     position:absolute;
     top:0;
     width:100%;
@@ -38,8 +44,8 @@
     align-items: center;
 }
 .loadingItem{
-    width:10vw;
-    height:10vw;
+    width:30px;
+    height:30px;
     background-color: gray;
     border-radius: 50%;
     opacity: 0.1;
@@ -53,10 +59,20 @@
     animation-delay: 20ms;
 }
 .loadingItem:nth-child(3){
-    animation-delay: 30mss;
+    animation-delay: 30ms;
 }
 .loadingItem:nth-child(4){
     animation-delay: 40ms;
+}
+@media screen and (max-width:600px) {
+     .item{
+         flex: 0 0 calc((100% - (0.6rem*4)) / 2 )
+     }
+}
+@media screen and (max-width:800px) and (min-width:601px) {
+    .item{
+        flex: 0 0 calc((100% - (0.6rem*6)) / 3 )
+    }
 }
 @keyframes fade-in-out {
     0%{
