--- a/tetris/style.css
+++ b/tetris/style.css
@@ -5,13 +5,40 @@
 #root{
     width:100%;
     display:flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+.statusBoard{
+    width:50%;
+    display:flex;
+    justify-content: space-around;
+    margin:1rem;
+}
+.statusBoard > span{
+    font-size: 1rem;
 }
 .playGround{
     width:60%;
     display: flex;
     flex-direction: column;
+}
+.end{
+    position: absolute;
+    width:100%;
+    height:100vw;
+    top:0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background:rgb(0,0,0,0.5);
+}
+.end > span {
+    font-size: 3rem;
+}
+.end > button {
+    font-size :2rem;
 }
 ul{
     list-style: none;
